feat: :sparkles: Add redirection to Dashboard and functional queries for Customers

--- a/violetSpringGardening/page/style.css
+++ b/violetSpringGardening/page/style.css
@@ -161,3 +161,17 @@ body{
 }
   
 
+
+
+
+@media screen and (max-width: 768px) {
+	#content {
+		position: relative;
+		width: calc(100% - 60px);
+		transition: all .3s ease;
+	}
+	nav .nav-link,
+	nav .divider {
+		display: none;
+	}
+}
