--- a/violetSpringGardening/page/style.css
+++ b/violetSpringGardening/page/style.css
@@ -1,177 +1,183 @@
-body{
-    background-color: rgb(39, 39, 44) !important;
-    font-family: "calibri";
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Share:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+
+body {
+    font-family: 'Dancing Script', cursive;
 }
+
+h1 {
+    font-weight: 700;
+    color: #ddd8ff;
+    font-size: 7vmin;
+    position: absolute;
+    top: 10%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    margin: 0;
+}
+
+
+.flower {
+    opacity: 0.7; /* Cambia este valor para ajustar la opacidad */
+    filter: brightness(90%); /* Cambia este valor para ajustar la oscuridad */
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) scale(0.50); /* Escala la imagen al 75% de su tamaño original */
+    z-index: -1; /* Ajusta el índice z según sea necesario para que la imagen esté detrás de los otros elementos */
+}
+
+.mandala {
+    opacity: 1; /* Cambia este valor para ajustar la opacidad */
+    filter: brightness(90%); /* Cambia este valor para ajustar la oscuridad */
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) scale(1.10); /* Escala la imagen al 75% de su tamaño original */
+    z-index: -1; /* Ajusta el índice z según sea necesario para que la imagen esté detrás de los otros elementos */
+}
+
+
+
+*, *:before, *:after {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
+@keyframes lightningAnimation {
+    0% {
+        background-position: 100% 0%;
+    }
+    50% {
+        background-position: 0% 0%;
+    }
+    100% {
+        background-position: 100% 0%;
+    }
+}
+
+
+body {
+    background-color: #080710;
+    animation: lightningAnimation 3s ease infinite alternate;
+    background-size: 400%; /* Ajusta el tamaño vertical */
+    background-image: linear-gradient(55deg, #201925, #53396ca4, #200c27);
+    align-items: center;
+    justify-content: center;
+}
+
+
 .header {
-    background-color: #0d0a0a; /* Color de fondo del header */
-    color: #bcd5fd; /* Color del texto */
-    text-align: center; /* Centra el texto horizontalmente */
-    padding: 20px 0; /* Añade espacio interno alrededor del contenido del header */
-}
-
-.title {
-    margin: 0; /* Elimina el margen por defecto */
+    text-align: center;
+    padding: 20px 0;
 }
 
 
-.controls{
-    width: 100%;
-    color: white;
-    background-color: #24303c;
-    padding: 10px;
-    border-radius: 4px;
-    margin-bottom: 10px;
-    border: 1px solid #1f53c5;
-    font-size: 18px;
+.form {
+    display: flex;
+    justify-content: center;
+    margin-top: 14rem;
+    height: 80vh;
 }
 
-.formDiv{
-    margin-top: 2px;
+.formDiv {
     width: 400px;
-    height: 450px;
-    background-color: #0d0a0a9a;
-    backdrop-filter: blur(15px);
-    background-size: 400% 400%;
-    padding: 30px;
-    border-radius: 8px;
-    box-shadow: 7px 13px 37px #464646;
-    
+    background-color: rgba(255, 255, 255, 0.051);
+    border-radius: 10px;
+    backdrop-filter: blur(10px);
+    border: 2px solid rgba(255, 255, 255, 0.1);
+    box-shadow: 0 0 40px rgba(8, 7, 16, 0.6);
+    padding: 50px 35px;
 }
 
-
-.formDiv h4{  
-    margin-top: 80px; 
+.formDiv h4 {
+    font-size: 40px;
+    font-weight: 500;
+    line-height: 42px;
     text-align: center;
-    color: white;
-    font-size: 22px;
-    margin-bottom: 20px
+    color: #ffffff;
 }
 
-.formDiv ::placeholder{
-    color: rgba(255, 255, 255, 0.242);
+.formDiv form {
+    margin-top: 30px;
 }
 
+.formDiv label {
+    display: block;
+    margin-top: 30px;
+    font-size: 16px;
+    font-weight: 500;
+    color: #ffffff;
+}
 
-.controlsTwo{
-    color: white;
+.formDiv input {
+    display: block;
+    height: 50px;
     width: 100%;
-    background-color: #7782ff34;
-    padding: 10px;
-    border-radius: 4px;
-    margin-bottom: 10px;
-    border: 1px solid #1f53c5;
-    font-size: 18px;
+    background-color: rgba(255, 255, 255, 0.07);
+    border-radius: 3px;
+    border: 2px solid rgba(255, 255, 255, 0.07);
+    padding: 0 10px;
+    margin-top: 20px;
+    font-size: 14px;
+    font-weight: 300;
+    color: #ffffff;
 }
 
-
-
-
-#forms {
-    margin-top: 105px;
-    background: linear-gradient(45deg, #f5f7fa 0%, #6e747f 81%);
-    background-size: 400% 400%;
-    position: relative;
-    padding: 30px;
-    border-radius: 8px;
-    box-shadow: 7px 13px 37px #100e2f;
-    animation: gradiente 5s ease infinite;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
+.formDiv input::placeholder {
+    color: #c2b9b9;
 }
 
-@keyframes gradiente {
-    0% {
-        background-position: 0% 50%;
-    }
-    50% {
-        background-position: 100% 50%;
-    }
-    100% {
-        background-position: 0% 50%;
-    }
-    
-}
-
-
-.btn-formulary {
-    font-size: 19px;
-    text-align: center;
+.formDiv button {
+    margin-top: 40px;
     width: 100%;
-    margin-top: 20px; /* Ajusta según sea necesario */
-    padding: 10px 20px;
+    background-color: #ffffff;
+    color: #080710;
+    padding: 15px 0;
     border: none;
-    background-color: #3090e4; /* Color de fondo */
-    color: rgb(33, 32, 32);
+    font-size: 18px;
+    font-weight: 600;
     border-radius: 5px;
-    transition: background-color 0.3s ease; /* Efecto de transición en hover */
+    cursor: pointer;
+    transition: background-color 0.3s ease;
 }
 
-.btn-formulary:hover {
-    background-color: #24780f;
-    color: rgb(241, 238, 255); 
+.formDiv button:hover {
+    background-color: #af3ced52;
+    color: #ffffff;
 }
 
-
-
-.container {
-    display: flex;
-    justify-content: center;
+.redirect button {
+    margin-top: 65px;
+    width: 100%;
+    background-color: #ffffff;
+    color: #080710;
+    padding: 15px 0;
+    border: none;
+    font-size: 18px;
+    font-weight: 600;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
 }
 
-.container > div {
-    margin: 0 10px;
+.redirect button:hover {
+    color: white;
+    z-index: -1;
+    background: linear-gradient( 90deg, #671f6776, #562a4c, #4a1167);
+    background-size: 800%;
+    animation: glowing 20s linear infinite;
 }
 
-
-
-@media screen and (max-width: 1000px) {
-    .formGroup{
-        padding: 5px;
-    }
-}
-
-#showDatax {
-    background: linear-gradient(45deg, #f5f7fa 0%, #6e747f 81%);
-    background-size: 400% 400%;
-    margin-top: 25px;
-    position: relative;
-    padding: 30px;
-    border-radius: 8px;
-    box-shadow: 7px 13px 37px #100e2f;
-    animation: gradiente 5s ease infinite;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
-}
-
-@keyframes gradiente {
+@keyframes glowing {
     0% {
-        background-position: 0% 50%;
+        background-position: 0% 0%;
     }
     50% {
-        background-position: 100% 50%;
+        background-position: 400% 0%;
     }
     100% {
-        background-position: 0% 50%;
+        background-position: 0% 0%;
     }
-    
 }
-  
 
-
-
-
-@media screen and (max-width: 768px) {
-	#content {
-		position: relative;
-		width: calc(100% - 60px);
-		transition: all .3s ease;
-	}
-	nav .nav-link,
-	nav .divider {
-		display: none;
-	}
-}
