--- a/violetSpringGardening/page/dashboardStyle.css
+++ b/violetSpringGardening/page/dashboardStyle.css
@@ -332,7 +332,81 @@ main .data .content-data {
 	background: #FFD0EC;
 	border-radius: 10px;
 	box-shadow: 4px 4px 16px rgba(185, 137, 220, 0.1);
+	
 }
+
+
+/* Error Message */
+
+.message {
+
+	height: 100%;
+	margin: 0;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	font-size: 2rem;
+	text-align: center;
+	margin-bottom: 20px; /* Espacio entre el mensaje y la imagen */
+}
+
+.img-Error {
+	margin-top: 20px; /* Espacio encima de la imagen */
+	text-align: center;
+}
+
+.img-Error img {
+	max-width: 100%;
+	height: auto;
+	padding: 10px; /* Espacio alrededor de la imagen */
+}
+
+ul {
+	list-style-type: none;
+	padding-left: 20px; /* Ajusta el valor según lo desees */
+}
+
+ul li {
+	margin-bottom: 5px; /* Espacio entre elementos de la lista */
+}
+
+/* ICONS STYLE */
+
+.bi-person-fill-gear {
+    transform: translateX(45px);
+}
+
+.bi-cart-x-fill{
+    transform:  translateX(45px); 
+}
+
+.bi-bag-x-fill {
+	transform: translateX(45px);
+}
+
+.bi-hourglass-bottom {
+transform: translateX(45px);
+}
+
+.bi-building {
+transform: translateX(45px);
+}
+
+.bi-person-up {
+	transform: translateX(45px);
+}
+
+.bi-person-dash {
+	transform: translateX(50px);
+}
+  
+
+
+
+
+
+
 
 
 
